kubernetes-cluster/manifests/juice-shop-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: juice-shop
  name: juice-shop
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop

  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - image: bkimminich/juice-shop
        imagePullPolicy: Always
        name: juice-shop
        ports:
        - containerPort: 3000
          protocol: TCP
