kubernetes-cluster/manifests/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juice-shop
  name: juice-shop
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: juice-shop
